compiler/kernc_cli/tests/soundness/run-pass/specialization/trait_object_dispatch_uses_const_specific_impl.kn
// exit: 0

trait Factory[N: usize] {
    type Out;
    fn make() Out;
};

struct X {};

impl[N: usize] &X: Factory[N] {
    type Out = i32;

    fn make() Out {
        return 1;
    }
}

impl &X: Factory[4] {
    type Out = i64;

    fn make() Out {
        return 9;
    }
}

fn main() i32 {
    let x = X.{};
    let factory = (x.& as &Factory[4, Out = i64]);
    let value = factory.make();
    if value != 9i64 {
        return 1;
    }
    return 0;
}
