compiler/kernc_cli/tests/soundness/reject/specialization/bound_method_cannot_use_shadowed_generic_assoc_impl.kn
// Bound-method lookup should agree with direct proof search: once a more-
// specific impl matches, method availability cannot fall back to the shadowed
// generic impl's associated type equality.
// stderr: type does not satisfy trait bounds
// stderr: &X: Factory[4, Out = i32]

trait Factory[N: usize] {
    type Out;
    fn make() Out;
};

struct X {};

impl[N: usize] &X: Factory[N] {
    type Out = i32;

    fn make() Out {
        return 1;
    }
}

impl &X: Factory[4] {
    type Out = i64;

    fn make() Out {
        return 9;
    }
}

fn call[N: usize](x: &X) i32
    where &X: Factory[N, Out = i32],
{
    _ = x.make();
    return 0;
}

fn main() i32 {
    let x = X.{};
    return call[4](x.&);
}
